fixing up  images

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span>BLOG</span>
                     <span>FAQS</span>
                 </div>
-                <img src="/extraImgs/logomp.webp" alt="" class="logo-img">
+                <img src="/extraImgs/logo.png.webp" alt="" class="logo-img">
                 <div class="search">
                     
                         <div class="search-bar">
@@ -113,13 +113,13 @@
     <h1>¡Abran paso a las estrellas!</h1>
 </div>
 <div class="gallery">
-    <a class="size-1 gini" href=""><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHgini.png" alt=""></a>
-    <a class="size-1 piper" href="product_1.html"><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHpiper.png" alt=""></a>
-    <a class="size-2 domi" href=""><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHdomi.png" alt=""></a>
-    <a class="size-2 boni" href="product_2.html"><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHboni.png" alt=""></a>
-    <a class="size-2 mika" href=""><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHmika.png" alt=""></a>
-    <a class="size-2 tini" href=""><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHtini.png" alt=""></a>
-    <a class="size-2 boo" href=""><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHboo.png" alt=""></a>
+    <a class="size gini" href=""><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHgini.png" alt=""></a>
+    <a class="size piper" href="product_1.html"><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHpiper.png" alt=""></a>
+    <a class="size domi" href=""><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHdomi.png" alt=""></a>
+    <a class="size boni" href="product_2.html"><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHboni.png" alt=""></a>
+    <a class="size mika" href=""><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHmika.png" alt=""></a>
+    <a class="size tini" href=""><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHtini.png" alt=""></a>
+    <a class="size boo" href=""><img src="Materiales Landing Page/Desktop/Galeria de imágenes/Front/Optimizadas/fotoCHERISHboo.png" alt=""></a>
 </div>
 
 <div class="headers"><h2>Un poco de información que cura </h2></div>
