fixing up  images

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span>BLOG</span>
                     <span>FAQS</span>
                 </div>
-                <img src="/extraImgs/logo.png.webp" alt="" class="logo-img">
+                <img src="extraImgs/logo.png.webp" alt="" class="logo-img">
                 <div class="search">
                     
                         <div class="search-bar">
@@ -69,7 +69,7 @@
     </header>
 
     <div class="bg-img">
-        <img src="/extraImgs/productosChERISH_desktop.png" alt="">
+        <img src="extraImgs/productosChERISH_desktop.png" alt="">
     </div>
 
     <div class="column">
@@ -126,7 +126,7 @@
 
 <div class="info">
     <div class="info-container">
-        <img src="/extraImgs/Blog-CHERISH-NuevosProductos.png.webp" alt="">
+        <img src="extraImgs/Blog-CHERISH-NuevosProductos.png.webp" alt="">
         <p class="bold">5 maneras creativas de usar CHERISH gini y piper</p>
         <p>Nuestros juguetes CHERISH te acompañarán en
             tus mejores momentos.
