fixing up  images

--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
             <p>Cuidamos de tu placer en cada paso</p>
             </div>
         <div class="inner">
-            <p><img src="/Materiales Landing Page/iconos/compra-discreta.svg" alt=""></p>
+            <p><img src="Materiales Landing Page/iconos/compra-discreta.svg" alt=""></p>
             <p>Garantizamos TU PRIVACIDAD</p>
             <p>Pago y envío 100% discretos</p>
         </div>
         <div class="inner">
-            <p><img src="/Materiales Landing Page/iconos/envio-express.svg" alt=""></p>
+            <p><img src="Materiales Landing Page/iconos/envio-express.svg" alt=""></p>
             <p>Entrega express a TODO México</p>
         </div>
         <div class="inner">
-            <p><img src="/Materiales Landing Page/iconos/garantia-2 años.svg" alt=""></p>
+            <p><img src="Materiales Landing Page/iconos/garantia-2 años.svg" alt=""></p>
             <p>Garantía de 2 años por defectos de fábrica</p>
         </div>
     </div>
