--- a/product_2.html
+++ b/product_2.html
@@ -37,7 +37,7 @@
                     <span>BLOG</span>
                     <span>FAQS</span>
                 </div>
-                <img src="/extraImgs/logo.png.webp" alt="" class="logo-img">
+                <img src="extraImgs/logo.png.webp" alt="" class="logo-img">
                 <div class="search">
                     
                         <div class="search-bar">
@@ -64,12 +64,12 @@
     </header>
 
     <div class="main-piper">
-        <img src="/extraImgs/CHERISHbonni-01new.png.webp" alt="">
+        <img src="extraImgs/CHERISHbonni-01new.png.webp" alt="">
     <section>
             <h2>CHERISH bonni – Conejo Vibrador</h2>
             <div class="banner-mp">
                 <p>-10% extra al pagar con  
-                    <img src="/extraImgs/logomp.webp" alt="">
+                    <img src="extraImgs/logomp.webp" alt="">
                     usando el código MP2022
                 </p>
             </div>
