fixing up last img

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <p>¿Jalas o pandeas?</p>
     </div>
     <div class="img-video">
-        <img src="/Materiales Landing Page/Desktop/portada-video.png" alt="">
+        <img src="Materiales Landing Page/Desktop/portada-video.png" alt="">
     </div>
 </div>
 <div class="title-star">
