--- a/product_2.html
+++ b/product_2.html
@@ -37,7 +37,7 @@
                     <span>BLOG</span>
                     <span>FAQS</span>
                 </div>
-                <img src="extraImgs/logo.png.webp" alt="" class="logo-img">
+                <img src="logo.png.webp" alt="" class="logo-img">
                 <div class="search">
                     
                         <div class="search-bar">
