fixing up some images

--- a/product_1.html
+++ b/product_1.html
@@ -37,7 +37,7 @@
                     <span>BLOG</span>
                     <span>FAQS</span>
                 </div>
-                <img src="logo.png.webp" alt="" class="logo-img">
+                <img src="extraImgs/logo.png.webp" alt="" class="logo-img">
                 <div class="search">
                     
                         <div class="search-bar">
@@ -69,7 +69,7 @@
             <h2>CHERISH piper - Vibrador de clítoris a control remoto</h2>
             <div class="banner-mp">
                 <p>-10% extra al pagar con  
-                    <img src="extraImgs/logomp.webp" alt="">
+                    <img src="logomp.webp" alt="">
                     usando el código MP2022
                 </p>
             </div>
